  * debhelper.7: Add a ~ to the suggested Build-Depends to ensure
    backports also work for debhelper with single integer versions.
    Thanks to Trent W. Buck for the suggestion.  (Closes: #894666)
  * makefile.pm: Use -Oline with make.  This avoids make mistaking
    a target name for a value for -O and should make build time
    outs less likely for "long" targets.  (Closes: #894573)

  [ Nicolas Boulenguez ]
  * dh_installxfonts: Fix typo that causes a misc:Depends on
    non-existing xfont-utils.  (Closes: #894835)

  [ Mattia Rizzolo ]
  * Lower the version restrictions on dpkg and dpkg-dev.  They are not
    needed anymore, as R³ support is not implied anymore, but requires
    an environment variable to be passed.

 -- Niels Thykier <niels@thykier.net>  Wed, 04 Apr 2018 05:14:35 +0000

debhelper (11.1.6) unstable; urgency=medium

  * Dh_Lib: Avoid passing invalid parameters to a function, which
    caused tons of "package ARRAY(...) is not in control info"
    warnings from dh in some cases.  It triggers when dh thinks
    the package might have architecture qualified debhelper config
    files.  The warning is harmless (besides the noise) for all
    native builds and most cross builds, but it did invalidate
    attempt to make pkgfile() use "DEB_TARGET_ARCH{,_OS}"
    (see 11.1.5~alpha1).  Thanks to Andreas Beckmann for reporting
    the issue.  (Closes: #891546)
  * dh: Refactor handling of sequences to simplify some code paths.
  * autopkgtests: Remove "use-name" tests as it no longer works.
    The debhelper module makes assumptions in which directory it is
    run from and the test breaks these assumptions.
  * debian/control: Comment out versioned dependency on make.
    It is not strictly necessary for Debian and causes issues with
    make-guile.  On the other hand, it is useful for people
    backporting debhelper on derivatives and hench leaving it as a
    comment.  (Closes: #892586)